# libAltOID_Sockets

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  autogen.sh  config.h  config.hin  config.status  configure  configure.ac  libAltOID_Sockets.pro
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
include/: Makefile.am  Makefile.in
include/alt_sockets/: datagram_socket.h  socket.h  socket_tcp.h  socket_udp.h  socket_unix.h  stream_socket.h
include/alt_sockets/SOSProtocol404/: SOSProtocol404Socket.h
include/alt_sockets/ThreadingControl/: threaded_client_control.h  threaded_stream_acceptor.h
libAltOIDSockets/: Makefile.am  Makefile.in  datagram_socket.cpp  socket.cpp  socket_tcp.cpp  socket_udp.cpp  socket_unix.cpp  stream_socket.cpp
libAltOIDSockets/SOSProtocol404/: SOSProtocol404Socket.cpp
libAltOIDSockets/ThreadingControl/: threaded_client_control.cpp  threaded_stream_acceptor.cpp
src/: Makefile.am  datagram_socket.cpp  datagram_socket.h  socket.cpp  socket.h  socket_tcp.cpp  socket_tcp.h  socket_tls_tcp.cpp  socket_tls_tcp.h  socket_udp.cpp  socket_udp.h  socket_unix.cpp  socket_unix.h  stream_socket.cpp  stream_socket.h
src/Pipes/: stream_pipe.cpp  stream_pipe.h  stream_pipe_thread_base.cpp  stream_pipe_thread_base.h
src/Pipes/.deps/: libalt_sockets_la-stream_pipe.Plo  libalt_sockets_la-stream_pipe_thread_base.Plo
src/SOSProtocol404/: SOSProtocol404Socket.cpp  SOSProtocol404Socket.h
src/SOSProtocol404/.deps/: libalt_sockets_la-SOSProtocol404Socket.Plo
src/SSL/: micro_ssl.cpp  micro_ssl.h
src/SSL/.deps/: libalt_sockets_la-micro_ssl.Plo
src/ThreadingControl/: threaded_client_control.cpp  threaded_client_control.h  threaded_stream_acceptor.cpp  threaded_stream_acceptor.h
src/ThreadingControl/.deps/: libalt_sockets_la-threaded_client_control.Plo  libalt_sockets_la-threaded_stream_acceptor.Plo
src/win32compat/: win32netcompat.cpp  win32netcompat.h
src/win32compat/.deps/: libalt_sockets_la-win32netcompat.Plo
